--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/main-process/main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/atom.git"
+    "url": "https://github.com/Alxmalaga/atom.git"
   },
   "bugs": {
     "url": "https://github.com/atom/atom/issues"
